# lit-rev

./: .gitignore  README.md  app.py  pyproject.toml
litrev/: engine.py  main.py  models.py  utils.py  zotero_enrichment.py
litrev/search/: acl_search.py  arxiv_search.py  dblp_search.py  scholar_search.py  scopus_search.py
